[tool.isort]
profile = "black"

[tool.poetry]
name = "greeneye_monitor"
version = "5.0"
description = "Receive data packets from GreenEye Monitor (http://www.brultech.com/greeneye/)"
homepage = "https://github.com/jkeljo/greeneye-monitor"
repository = "https://github.com/jkeljo/greeneye-monitor"
license = "MIT"
readme = "README.rst"
authors = ["Jonathan Keljo"]
keywords = ["greeneye"]
packages = [{include="greeneye"}]
include = ["greeneye/py.typed"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
siobrultech-protocols = "0.12"

[tool.poetry.group.test.dependencies]
ruff = "*"
pyright = "*"
pytest = "*"
pytest-socket = "*"

[tool.pyright]
include = ["greeneye", "tests", "dump_packets.py"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
